--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "markdown-it": "^13.0.1",
     "sass": "^1.56.1",
     "vite-plugin-inspect": "^0.5.0",
-    "vitepress": "^1.0.0-alpha.13",
+    "vitepress": "^1.6.0",
     "vitepress-plugin-search": "^1.0.4-alpha.22",
     "vue": "^3.2.37"
   }
